[package]
name = "collectd-shrimp"
description = "An exec plugin wrapper to collect metrics with collectd in a crustacean way."
readme = "README.md"
authors = ["David Hauweele <david@hauweele.net>"]
license = "BSD-3-Clause"
repository = "https://github.com/gawen947/collectd-shrimp.git"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.183", features = ["derive"] }
toml = "0.7.6"
