[package]
name = "collectd-shrimp"
description = "An exec plugin wrapper to collect metrics with collectd in a crustacean way."
readme = "README.md"
authors = ["David Hauweele <david@hauweele.net>"]
license = "BSD-3-Clause"
repository = "https://github.com/gawen947/collectd-shrimp.git"
version = "0.1.13"
edition = "2021"

[dependencies]
serde = { version = "1.0.183", features = ["derive"] }
sysctl = { version = "0.5.4", optional = true }
toml = "0.7.6"
ureq = { version = "2.7.1", optional = true }

[features]
sysctl = ["dep:sysctl"]
sysctl_factor = ["sysctl"]
sysctl_temp = ["sysctl"]
file = []
file_factor = []
http_latency = ["dep:ureq"]

[profile.release]
strip = true
lto = true
